--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,15 +37,10 @@
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <ul class="navbar-nav">
                 <li class="nav-item  ">
-                    <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                    <a class="nav-link" href="{{ url_for('get_recommendations') }}">Get Recommendations</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="{{ url_for('login') }}">Login</a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="{{ url_for('index') }}"
-                        >Logout</a
-                    >
+                    <a class="nav-link" href="{{ url_for('rate_movie') }}">Rate a movie</a>
                 </li>
             </ul>
         </nav>
