--- a/app/templates/rate.html
+++ b/app/templates/rate.html
@@ -10,16 +10,24 @@
     <form action="" method="post" novalidate>
       {{form.hidden_tag()}}
       <div>
-        {{ form.user_id.label }} <br />
-        {{ form.user_id(size=32,class_="form-control") }}
-        {% for error in form.user_id.errors %}
+        {{ form.username.label }} <br />
+        {{ form.username(size=32,class_="form-control") }}
+        {% for error in form.username.errors %}
+          <span style="color: red;">[{{ error }}]</span>
+        {% endfor %}
+      </div>
+      <br/>
+      <div>
+        {{ form.password.label }} <br />
+        {{ form.password(size=32,class_="form-control") }}
+        {% for error in form.password.errors %}
           <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
       </div>
       <br/>
        <div>
         {{ form.movie_id.label }} <br />
-        {{ form.movie_id(size=32,class_="form-control") }}
+        {{ form.movie_id(class_="form-control") }}
         {% for error in form.movie_id.errors %}
           <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
