--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,6 +42,9 @@
                 <li class="nav-item ">
                     <a class="nav-link" href="{{ url_for('rate_movie') }}">Rate a movie</a>
                 </li>
+                <li class="nav-item ">
+                    <a class="nav-link" href="{{ url_for('register_user') }}">Register</a>
+                </li>
             </ul>
         </nav>
         <div class="text-center">
